fix(index + package.json)): correções de acesso ao site

--- a/site_signal/package.json
+++ b/site_signal/package.json
@@ -1,6 +1,6 @@
 {
   "name": "site_signal",
-  "homepage": "https://signaljrprojetos.github.io/site_signal",
+  "homepage": "https://signaljr.com.br",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
