Atualizando gitignore e adicionando apollo client ao .env

--- a/site_signal/.env
+++ b/site_signal/.env
@@ -1,3 +1,4 @@
 REACT_APP_EMAIL_SERVICE_ID=service_4jw04wx
 REACT_APP_EMAIL_TEMPLATE_ID=template_bgrfwqa
 REACT_APP_EMAIL_PUBLICKEY=7uN9BAm-ze4ihfO32
+REACT_APP_APOLLO_CLIENT=https://api-sa-east-1.hygraph.com/v2/clc6z7qtv1r5e01uvhxz35sjd/master
